chore: add swagger doc comments
